testsuite/tests/saks/should_fail/saks_fail020.stderr

saks_fail020.hs:9:49: error:
    • Expected kind ‘k’, but ‘a’ has kind ‘k0’
        because kind variable ‘k’ would escape its scope
      This (rigid, skolem) kind variable is bound by
        ‘forall (k :: Type) -> Proxy (a :: k)’
        at saks_fail020.hs:9:20-55
    • In the first argument of ‘Proxy’, namely ‘(a :: k)’
      In a standalone kind signature for ‘Foo2’:
        () -> forall (k :: Type) -> Proxy (a :: k)
